# cyberlab-gen

./: .gitignore  CALIBRATION.md  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/commands/: end-task.md  next-task.md
.github/workflows/: verify.yml
cyberlab_gen/: __init__.py  errors.py  logging_setup.py  runtime.py  tracing_setup.py
cyberlab_gen/agents/: __init__.py  call_surface.py  prompts.py  proposals.py  results.py  tool_agent.py
cyberlab_gen/cli/: __init__.py  context.py  extract.py  interrupt.py  main.py  output.py  plan.py
cyberlab_gen/external_data_sources/: __init__.py  materiality.py  ports.py  registry.py  support.py  types.py
cyberlab_gen/framework/: __init__.py  checkpointing.py  enrichment.py  graph_support.py  ingestion.py  orchestrator.py  plan_orchestrator.py  proposal_acceptance.py  provenance_guard.py  refinement.py  reproducibility.py
cyberlab_gen/providers/: __init__.py  anthropic_provider.py  base.py  cost_ledger.py  cost_recording_provider.py  mock_provider.py  model_rankings.yaml  pricing.yaml  ranking.py  retries.py
cyberlab_gen/registries/: __init__.py  catalog_loader.py  loader.py  merge.py  overlay_writer.py
cyberlab_gen/schemas/: __init__.py  attack_spec.py  base.py  catalogs.py  enums.py  envelope.py  framework_owned.py  ingestion.py  loading.py  manifest.py  primitives.py  provenance.py  registries.py
cyberlab_gen/state/: __init__.py  local_state.py  run_persistence.py  run_store.py  trajectory.py
cyberlab_gen/validators/: __init__.py  base.py  grounding_validator.py  layer1.py  semantic_cross_check_validator.py  static_schema_validator.py
dev/: phase-0-execution-log.md  phase-1-agent-brief.md  phase-1-execution-log.md  phase-2-agent-brief.md  phase-2-execution-log.md  phase-2-seams.md
dev/curated-blog-walks/: ai-assisted-aws-intrusion.md  aws-codebuild-actor-id-regex-bypass.md  confusedfunction-gcp-cloud-functions-privesc.md  entra-id-actor-token-cross-tenant-global-admin.md  gke-fluentbit-anthos-dual-privesc.md  long-multi-stage-cloud-campaign.md  lucr-3-scattered-spider-multicloud-identity.md  netlify-ipx-cache-poisoning-xss-ssrf.md  template.md
dev/decisions/: 0001-click-vs-typer.md  0002-build-system.md  0003-python-upper-bound.md  0004-base-class-discipline.md  0005-external-api-confidence.md  0006-inference-corroboration.md  0007-empty-path-template.md  0008-merged-registries-base-class.md  0009-phase0-error-hierarchy.md  0010-bundled-registry-path-resolution.md  0011-configured-provider-phase-0.md  0012-localstate-path-resolution.md  0013-cli-flag-surface.md  0014-blog-set-manifest-schema.md  0015-proposals-registry-key-type.md  0016-closed-catalog-models.md  0017-material-discrepancies-field.md  0018-agent-call-surface-structural-retry.md  0019-ingestion-fetch-injection-and-failure-fixtures.md  0020-enrichment-skeleton-design.md  0021-extractor-output-and-rejection-loop.md  0022-validator-layer1-location.md  0023-extractor-orchestration-and-retry-refinement-split.md  0024-extract-verb-runner-seam-and-interrupt.md  0025-eval-harness-phase1-shape.md  0026-descriptive-validator-names.md  0027-anthropic-adapter-call-bodies.md  0028-eval-run-resilience-skip-incremental-archive-progress.md  0035-capture-truncated-emit-raw-content.md  (+82 more)
docs/: agents.md  architecture.md  coding-conventions.md  eval.md  implementation-plan.md  index.md  pipeline.md  provider-interface.md  registry-details.md  schema-details.md  schema.md  validation.md
eval/: __init__.py
registry/: detection_components.yaml  detection_formats.yaml  execution_contexts.yaml  external_data_sources.yaml  facets.yaml  lab_credentials.yaml  mitre_attack_techniques.yaml  provisioning_mechanisms.yaml  severity_levels.yaml  static_catalogs.yaml  thesis_types.yaml  value_types.yaml
tests/: conftest.py  test_smoke.py
(+124 files in other folders)
