[project]
name = "cyberlab-gen"
version = "0.0.1"
description = "Generate runnable, validated cyber labs from security writeups."
# `readme = "README.md"` re-added in Task 9 when README.md lands.
requires-python = ">=3.13,<3.15"
license = { text = "MIT" }
authors = [{ name = "Barak Agranov" }]
dependencies = [
    "pydantic>=2.5",
    "ruamel.yaml>=0.18",
    "typer>=0.12",
    "rich>=13",
    "platformdirs>=4",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cyberlab_gen"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "TCH", "PTH", "LOG", "T20"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["cyberlab_gen", "tests", "eval"]
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
pythonVersion = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
