[project]
name = "cyberlab-gen"
version = "0.0.1"
description = "Generate runnable, validated cyber labs from security writeups."
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = { text = "MIT" }
authors = [{ name = "Barak Agranov" }]
dependencies = [
    "pydantic>=2.5",
    "ruamel.yaml>=0.18",
    "typer>=0.12",
    "rich>=13",
    "platformdirs>=4",
    "anthropic>=0.40",
    # Phase 1 (coding-conventions.md §10.2): first agent + orchestrator ship.
    # openai/anthropic SDK clients are pulled in by their provider adapters, not
    # pre-staged beyond the Phase-0 anthropic dep (Task 2 brief item 1).
    "pydantic-ai>=0.0.14",
    "langgraph>=0.2",
    "httpx>=0.27",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8",
    # Phase 1: async provider/agent tests (coding-conventions.md §8.6).
    "pytest-asyncio>=0.23",
    # Phase 1: recorded-HTTP tests for the Ingestion stage and external data
    # sources (coding-conventions.md §8.4). Record once, replay forever.
    "pytest-recording>=0.13",
]

[project.scripts]
cyberlab-gen = "cyberlab_gen.cli.main:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cyberlab_gen"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "TCH", "PTH", "LOG", "T20", "ANN401"]
ignore = ["E501"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic evaluates field annotations at runtime (get_type_hints), so the types
# used in model fields must stay importable at runtime — they must not be moved into
# a TYPE_CHECKING block. Declare the model base classes as runtime-evaluated.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "cyberlab_gen.schemas.base.ArtifactModel",
    "cyberlab_gen.schemas.base.InternalModel",
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["cyberlab_gen", "tests", "eval"]
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
pythonVersion = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Phase 1: auto-detect `async def` tests (coding-conventions.md §8.6).
asyncio_mode = "auto"
# The eval harness (eval/) is top-level and NOT an installed package; put the
# repo root on the path so tests/eval can `import eval.runner` (Task 8 / ADR 0025).
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest-recording>=0.13.4",
]
